# layout-rs

./: .ai_instructions.md  .claude_config  .copilot_config.json  .gitignore_ai_configs  Cargo.toml  LICENSE-MIT  README.md  check_server.sh  index.html  index.scss
.github/: copilot-instructions.md
.github/instructions/: .instructions.md
.github/workflows/: deploy.yml
src/: app.rs  keycodes.rs  main.rs
src/components/: hand.rs  header.rs  key.rs  key_editor.rs  key_library.rs  keyboard.rs  keymap.rs  layout.rs  mod.rs  thumb_cluster.rs
