[package]
name = "layout-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust-based keyboard layout application"
readme = "README.md"
repository = "https://github.com/gaarutyunov/layout-rs"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming", "dactyl-manuform", "keyboard-layout"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlAnchorElement",
  "Window",
  "Storage",
  "Blob",
  "Url",
] }
js-sys = "0.3"
gloo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
once_cell = "1.19"
paste = "1.0.15"
